[gd_scene load_steps=4 format=3 uid="uid://2gypiq34amhn"]

[ext_resource type="Script" uid="uid://cgidki0rxl6d3" path="res://scenes/dialogue_box.gd" id="1_pkx4w"]

[sub_resource type="LabelSettings" id="LabelSettings_36pgd"]

[sub_resource type="LabelSettings" id="LabelSettings_tmfn4"]
outline_size = 1

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pkx4w")

[node name="DialogueBox" type="VBoxContainer" parent="."]
offset_left = 27.0
offset_right = 812.0
offset_bottom = 417.0

[node name="Speaker" type="Label" parent="DialogueBox"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_36pgd")

[node name="DialogueText" type="Label" parent="DialogueBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
label_settings = SubResource("LabelSettings_tmfn4")
horizontal_alignment = 3
vertical_alignment = 3
autowrap_mode = 3
justification_flags = 0

[node name="Characters" type="HBoxContainer" parent="DialogueBox"]
layout_mode = 2

[node name="NPCImage" type="TextureRect" parent="DialogueBox/Characters"]
layout_direction = 3
layout_mode = 2
expand_mode = 5
stretch_mode = 4

[node name="Control" type="Control" parent="DialogueBox/Characters"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerImage" type="TextureRect" parent="DialogueBox/Characters"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 5
stretch_mode = 4

[node name="ScrollContainer" type="ScrollContainer" parent="DialogueBox"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
vertical_scroll_mode = 2

[node name="Choices" type="VBoxContainer" parent="DialogueBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogueBox3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
